[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/cards/CardBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/battle/card_related/BattleCard.gd" type="Script" id=2]

[node name="BattleCard" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
script = ExtResource( 2 )

[node name="CardBase" parent="." instance=ExtResource( 1 )]

[node name="Focus" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 350.0

[connection signal="button_down" from="Focus" to="." method="_on_Focus_button_down"]
[connection signal="button_up" from="Focus" to="." method="_on_Focus_button_up"]
[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
